[package]
name = "ArabRustCheatCheck"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "A cheat check for Rust to detect any Rust Cheat files in the suspect's PC"

[dependencies]
slint = "1.8.0"

[build-dependencies]
slint-build = "1.8.0"

[package.metadata.bundle]
name = "ArabRust Cheat Check"
identifier = "io.github.maxxkinz.ArabRustCheatCheck"
